# job-application-agent

./: .env.example  .gitignore  .keepalive  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: apply-approved.yml  ci.yml  digest.yml  keepalive.yml
agent/analyze/: scorer.py
agent/apply/: browser.py
agent/data/: store.py
agent/notify/: emailer.py  reply_checker.py
agent/search/: arc_scraper.py  crossover_scraper.py  mygov_scraper.py  scraper.py
config/: preferences.yaml  resume.md
scripts/: com.jobagent.apply.plist  com.jobagent.digest.plist
tests/: test_arc_scraper.py  test_crossover_scraper.py  test_emailer.py  test_mygov.py  test_reply_checker.py  test_scorer.py  test_scraper.py  test_store.py
