[project]
name = "job-application-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.0",
    "beautifulsoup4>=4.14.3",
    "groq>=1.1.2",
    "jobspy2>=0.0.8",
    "ollama>=0.6.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "W"]
ignore = [
    "B008",   # function calls in default args — fine for our use
    "UP007",  # X | Y union syntax — keep Optional for clarity
]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
